samples/_failures_safe/1761086553_6ba6f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f39f0637.c: In function ‘main’:
./samples/SAFE/__tmp_f39f0637.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_f39f0637.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f39f0637.c:152:17: error: expected declaration or statement at end of input
